Fix responsive issues on mobile

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -28,11 +28,11 @@
 }
 
 h1{
-  font-size: 6.5em;
+  font-size: 6em;
   text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 h2 {
-  font-size: 4.5em;
+  font-size: 4em;
   text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
