--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,6 @@ body {
 .mat-step-text-label {
   font-family: 'Amatic SC', cursive;
   font-weight: bold;
-  font-size: 3em;
+  font-size: 2em;
   color: #465A73
 }
